// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appeals Component should Render with NO table of existing appeals 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3
        class="govuk-heading-s"
      >
        Appeals
      </h3>
      <p
        class="govuk-body"
      >
        Record an appeal against this request:
      </p>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/add"
      >
        Add an appeal
      </a>
    </div>
  </body>,
  "container": <div>
    <h3
      class="govuk-heading-s"
    >
      Appeals
    </h3>
    <p
      class="govuk-body"
    >
      Record an appeal against this request:
    </p>
    <a
      class="govuk-body govuk-link"
      href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/add"
    >
      Add an appeal
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Appeals Component should Render with table of existing appeals 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3
        class="govuk-heading-s"
      >
        Appeals
      </h3>
      <dl
        class="govuk-summary-list"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Court of Appeal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/e2e033ef-a819-4ea8-b793-aa1b9eadf3e2?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Court of Appeal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/50792f80-3f74-4eab-be86-a96e0e0749da?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Court of Appeal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/5fcad74b-3577-49eb-893d-5923c771c2f4?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Court of Appeal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/08d3bdb9-44bc-4b76-b4b6-52e10876a81d?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            First Tier Tribunal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/f5868426-fdaa-4148-89ba-aa93c6989919?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Internal Review
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Complete
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/72fd3cf4-f15a-4c20-90d4-90d1a663e2f5?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Upper Tribunal
          </dt>
          <dt
            class="govuk-summary-list__value"
          >
            Pending
          </dt>
          <dt
            class="govuk-summary-list__actions"
          >
            <a
              class="govuk-link"
              href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/c328ca43-1bc8-40d8-a52e-e15684ad83f3?hideSidebar=false"
            >
              Update
            </a>
          </dt>
        </div>
      </dl>
      <p
        class="govuk-body"
      >
        Record an appeal against this request:
      </p>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/add"
      >
        Add an appeal
      </a>
    </div>
  </body>,
  "container": <div>
    <h3
      class="govuk-heading-s"
    >
      Appeals
    </h3>
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Court of Appeal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/e2e033ef-a819-4ea8-b793-aa1b9eadf3e2?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Court of Appeal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/50792f80-3f74-4eab-be86-a96e0e0749da?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Court of Appeal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/5fcad74b-3577-49eb-893d-5923c771c2f4?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Court of Appeal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/08d3bdb9-44bc-4b76-b4b6-52e10876a81d?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          First Tier Tribunal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/f5868426-fdaa-4148-89ba-aa93c6989919?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Internal Review
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Complete
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/72fd3cf4-f15a-4c20-90d4-90d1a663e2f5?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Upper Tribunal
        </dt>
        <dt
          class="govuk-summary-list__value"
        >
          Pending
        </dt>
        <dt
          class="govuk-summary-list__actions"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/update/c328ca43-1bc8-40d8-a52e-e15684ad83f3?hideSidebar=false"
          >
            Update
          </a>
        </dt>
      </div>
    </dl>
    <p
      class="govuk-body"
    >
      Record an appeal against this request:
    </p>
    <a
      class="govuk-body govuk-link"
      href="/case/some_case_id/stage/some_stage_id/caseAction/appeal/add"
    >
      Add an appeal
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
